# mlops_load_forecasting

./: .dockerignore  .env  .gitignore  Dockerfile.airflow  Dockerfile.mlflow  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: energy_batch_prediction_dag.py  energy_training_dag.py
config/: config.yaml
energy_forecasting/: __init__.py  constants.py  exception.py  logger.py
energy_forecasting/components/: batch_prediction.py  data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
energy_forecasting/configuration/: __init__.py  configuration.py
energy_forecasting/data_access/: __init__.py  postgres_loader.py
energy_forecasting/entity/: __init__.py  artifact_entity.py  config_entity.py
energy_forecasting/pipline/: __init__.py  batch_prediction_pipeline.py  training_pipeline.py
energy_forecasting/utils/: __init__.py
notebooks/: EDA_and_modeling_MLforecast.ipynb  batch_prediction.ipynb
scripts/: kaggle_to_db_df_mlf.py
tests/: test_batch_prediction_pipeline_full.py  test_data_transformation.py  test_model_trainer.py  test_pipelines_interfaces.py  test_postgres_loader.py  test_train_pipeline_full.py
