[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-mlops"
version = "0.1.0"
description = "Energy forecasting MLOps project"
authors = [{ name = "Ramin" }]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
